...
                        Image("login-image").resizable().scaledToFit().frame(width: min(g.size.width, g.size.height)*2/3, height:  min(g.size.width, g.size.height)*2/3)
                        Text("You have to be logged in to display this page").bold().foregroundColor(Color("PrimaryLabel"))
                        Button {
                            viewModel.displayLogin()
                        } label: {
                            Text("Login Now").bold().foregroundColor(Color("Primary"))
                        }.accessibilityIdentifier("TrackedViewLoginButton")
                    }.frame(width: g.size.width, height: g.size.height, alignment: .center)
                }
            } else {
                ZStack{
                    
                            GeometryReader{ geometry in
                                ScrollView(.vertical, showsIndicators: false){
                                    VStack{
                                        HStack{
                                            Image(systemName: "magnifyingglass")
                                            TextField("Search", text: searchTextProxy).accessibilityIdentifier("TrackedViewSearchTextField")
                                            if(viewModel.isSearching){
                                                Button{
                                                    viewModel.searchText = ""
                                                    viewModel.isSearching = false
                                                } label: {
                                                    Image(systemName: "multiply")
...
                                                                }
                                                            }
                                                            
                                                        }
                                                    }
                                                } else {
                                                    Text("No results").frame(maxWidth: .infinity, maxHeight: .infinity).accessibilityIdentifier("TrackedViewNoResult")
                                                }
                                            } else {
                                                LazyVGrid(columns: columns, spacing: 20) {
                                                    ForEach(0 ..< viewModel.trackingObjects.count, id: \.self){ contentIndex in
                                                        NavigationLink{
                                                            iPadProductView(product: Product.fromTracked(viewModel.trackingObjects[contentIndex]))
...
