...
                } label: {
                    VStack{
                        Image(systemName: elements[1].iconSystemName)
                        Circle().fill(Color("Primary")).frame(width: 5, height: 5, alignment: .center).opacity(selectedTab == elements[1].tag ? 1 : 0)
                    }
                }.frame(width: geometry.size.width/5).foregroundColor(selectedTab == elements[1].tag ? Color("PrimaryLabel") : Color("PrimaryLabel").opacity(0.5))
                    .accessibilityIdentifier("TrackingTabBar")
                Spacer()
                Button{
                    centralButtonAction()
                } label: {
                    Image(systemName: "plus")
                }.buttonStyle(PlainButtonStyle())
...
