...
                            mode.wrappedValue.dismiss()
                        } label: {
                            Image(systemName: "arrow.left").font(.title3.bold())
                        }.foregroundColor(Color("PrimaryLabel"))
                        Spacer()
                    }.padding(.bottom,3)
                    Text(viewModel.product.shortName).lineLimit(2).font(.title2.bold()).foregroundColor(Color("PrimaryLabel")).accessibilityIdentifier("ProductViewHomeName")
                    MenuBar(selection: $viewModel.selectedTab, items: viewModel.menuItems, background: Color("Primary"), foreground: Color("PrimaryLabel")).frame(height: 40)
                    
                        if(viewModel.selectedTab=="price"){
                            PriceView(viewModel: viewModel)
                        } else if(viewModel.selectedTab == "comment"){
                            CommentView(viewModel: viewModel)
...
