...
                                    .padding(.vertical, 7)
                                    .background(Color("Primary"))
                                    .foregroundColor(Color.white)
                                    .cornerRadius(15)
                                    .disabled(!viewModel.validatePassword())
                                    .opacity(!viewModel.validatePassword() ? 0.5 : 1)
                                    .accessibilityIdentifier("UserProfileViewiPadChange")
                                    }
                                    .padding(.top)
                                }
                            }.padding(.top)

                            
...
